--- a/ParkEasy/.env.exem
+++ b/ParkEasy/.env.exem
@@ -4,3 +4,19 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_HOST=
 DATABASE_PORT=
+CLIENT_ID=
+CLIENT_SECRETS=
+EMAIL=
+ACCESS_TOKEN=
+REFRESH_TOKEN=
+EXPIRES_AT=
+REDIS=
+REDIS_PASS=
+EMAIL_BACKEND=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_STARTTLS=
+EMAIL_USE_SSL=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DJANGO_SECRET_KEY=
