--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["Group_6"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 django = "^5.0.4"
 django-environ = "^0.11.2"
 pydrive = "^1.3.1"
