--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ redis = {extras = ["hiredis"], version = "^5.0.4"}
 django-redis = "^5.4.0"
 python-dotenv = "^1.0.1"
 feedparser = "^6.0.11"
+pandas = "^2.2.2"
+xlsxwriter = "^3.2.0"
+openpyxl = "^3.1.5"
 
 
 [build-system]
