--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,10 @@ inference-sdk = { version = "^0.16.2", python = ">=3.11,<3.12" }
 paddlepaddle = "^2.6.1"
 paddleocr = "^2.8.1"
 pytesseract = "^0.3.13"
-
+pandas = "^2.2.2"
+xlsxwriter = "^3.2.0"
+openpyxl = "^3.1.5"
+protobuf = "3.20"
 
 [build-system]
 requires = ["poetry-core"]
