--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,10 @@ pytesseract = "^0.3.13"
 pandas = "^2.2.2"
 xlsxwriter = "^3.2.0"
 openpyxl = "^3.1.5"
-protobuf = "3.20"
+protobuf = "^3.20"
+django-celery-beat = "^2.7.0"
+django-celery-results = "^2.5.1"
+flower = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
