--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ protobuf = "^3.20"
 django-celery-beat = "^2.7.0"
 django-celery-results = "^2.5.1"
 flower = "^2.0.1"
+celery = "^5.4.0"
 
 [build-system]
 requires = ["poetry-core"]
