--- a/ParkEasy/docker-compose.yml
+++ b/ParkEasy/docker-compose.yml
@@ -1,19 +1,20 @@
-version: '3.9'
+version: '3.9' 
 
 services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: ${PARKEASY_DATABASE_NAME}
-      POSTGRES_USER: ${PARKEASY_DATABASE_USER}
-      POSTGRES_PASSWORD: ${PARKEASY_DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+
     volumes:
       - db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
     environment:
-      REDIS_PASSWORD: ${PARKEASY_REDIS_PASS}
+      REDIS_PASSWORD: ${REDIS_PASS}
 
   web:
     build: .
