--- a/ParkEasy/dockerfile
+++ b/ParkEasy/dockerfile
@@ -1,20 +1,20 @@
-FROM python:3.10
+    FROM python:3.12-slim
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+    ENV PYTHONDONTWRITEBYTECODE 1
+    ENV PYTHONUNBUFFERED 1
 
-WORKDIR /ParkEasy
+    WORKDIR /ParkEasy
 
-RUN apt-get update \
-    && apt-get install -y \
-       libgl1-mesa-glx \
-    && rm -rf /var/lib/apt/lists/*
+    RUN apt-get update \
+        && apt-get install -y \
+        libgl1-mesa-glx \
+        && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt /ParkEasy/
-RUN pip install --no-cache-dir -r requirements.txt
+    COPY requirements.txt /ParkEasy/
+    RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /ParkEasy/
+    COPY . /ParkEasy/
 
-RUN python manage.py migrate
+    RUN python manage.py runserver
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "ParkEasy.wsgi:application"]
+    CMD ["gunicorn", "--bind", "0.0.0.0:8000", "ParkEasy.wsgi:application"]
